# hustream

./: .gitignore  package.json  pyproject.toml  requirements.txt
backend/: settings.py  urls.py
frontend/: package.json
frontend/src/: App.js  index.css
todo/migrations/: 0001_initial.py
